--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":            "^7.2.0",
+        "php":            ">=7.2",
         "secretary/core": "self.version"
     },
     "require-dev":       {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^8.0 || ^9.0",
         "mockery/mockery": "^1.2"
     },
     "autoload":          {
