--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "minimum-stability": "stable",
     "require":           {
-        "php":            ">=7.4",
+        "php":            "^7.4 || ^8.0",
         "secretary/core": "self.version"
     },
     "require-dev":       {
