--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "secretary/core": "self.version"
     },
     "require-dev":       {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.0 || ^10.0",
         "mockery/mockery": "^1.4"
     },
     "autoload":          {
